--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
               
               <div class="flex gap-3 mt-6">
                 <a
-                  href="https://feasibledecisiveasserted.com/h4sjkuwqd8?key=7a0c228d2c41687cf5c1794a5929c865"
+                  :href="'https://www.imdb.com/title/' + selectedMovie.imdbID"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="inline-flex items-center gap-2 bg-pink-500 hover:bg-pink-600 px-4 py-2 rounded text-sm transition flex-grow justify-center"
