--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         
         <div class="text-center mt-6 text-sm">
           <p>© 2025 Film & TV Explorer. All rights reserved.</p>
-          <p class="mt-1">Data provided by OMDB API</p>
+          <!-- <p class="mt-1">Data provided by OMDB API</p> -->
         </div>
       </div>
     </footer>
